@@ -30,6 +30,8 @@
 
 	clarify that calibrate() can take margins specified in either of the formats
 	that rake() accepts
+
+	rake() now handles much larger sets of margins (from Ben Schneider)
 	
 
 4.4-3	options(survey.lonely.psu="adjust") needed strata to be a factor or numeric
